--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,11 @@
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js" th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
 </head>
 <body>
-
+	<div class="container">
+		<h2>Datafordeler - Registerdemo</h2>
+		<ul class="list-unstyled">
+			<li><a href="/postnummer">Postnumre</a></li>
+		</ul>
+	</div>
 </body>
 </html>
