--- a/src/main/resources/templates/postnummerregistrering.html
+++ b/src/main/resources/templates/postnummerregistrering.html
@@ -7,10 +7,20 @@
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js" th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
 </head>
 <body>
-    <form action="#" th:object="${postnummerregistrering}" method="post">
-        <p>Postnr: <input type="text" th:field="*{nummer}" /></p>
-        <p>Bynavn: <input type="text" th:field="*{bynavn}" /></p>
-        <p><input type="submit" value="Submit" /></p>
-    </form>
+    <div class="container">
+        <h2>Datafordeler - Registerdemo</h2>
+        <form action="#" th:object="${postnummerregistrering}" method="post">
+            <div class="form-group">
+                <label for="nummer">Postnr:</label>
+                <input id="nummer" type="text" th:field="*{nummer}" />
+            </div>
+            <div class="form-group">
+                <label for="bynavn">Bynavn:</label>
+                <input id="bynavn" type="text" th:field="*{bynavn}" />
+            </div>
+            <a th:href="${cancel}" class="btn btn-default">Annullér</a>
+            <button type="submit" value="Submit" class="btn btn-default">Gem</button>
+        </form>
+    </div>
 </body>
 </html>
