--- a/src/main/resources/templates/postnummer.html
+++ b/src/main/resources/templates/postnummer.html
@@ -27,7 +27,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="/postnummmer" class="btn btn-default">Tilbage til liste</a>
+        <a href="/postnummer" class="btn btn-default">Tilbage til liste</a>
         <a th:href="|/postnummer/${postnummer.id}/update|" class="btn btn-default">Tilføj registrering</a>
     </div>
 </body>
